--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "react": "^17.0.2",
+    "firebase": "^8.4.1",
+    "grommet": "^2.16.3",
+    "grommet-icons": "^4.5.0",
+    "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
@@ -39,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@imaginary-cloud/prettier-config": "^1.0.0",
+    "eslint": "^7.24.0",
+    "prettier": "^2.2.1"
   }
 }
